# mirror-registry

./: .gitignore  Cargo.toml  README.md
migrations/2021-03-03-055332_create_crates/: up.sql
migrations/2021-03-11-091059_create_accounts/: up.sql
src/: config.rs  git.rs  main.rs
src/auth/: account.rs  ldap.rs  mod.rs  models.rs
src/crates_io/: db.rs  index.rs  mod.rs  models.rs
src/database/: mod.rs  schema.rs
ui/: angular.json  package.json
ui/src/: index.html
ui/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts  auth.service.ts  config.service.ts  utils.service.ts
ui/src/app/home/: home.component.css  home.component.html  home.component.ts
ui/src/app/wizard/: wizard.component.css  wizard.component.html  wizard.component.ts
