[package]
authors = ["raven <avalon1610@gmail.com>"]
edition = "2018"
name = "mirror-registry"
version = "0.1.0"
description = "an Alternate Registry, can be used to mirror upstream registry and serve private crates"
license = "MIT OR Apache-2.0"
repository  = "https://github.com/avalon1610/mirror-registry.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = {version = "0.4", features = ["serde"]}
diesel = {version = "1.4", default-features = false, features = ["sqlite", "32-column-tables", "chrono"]}
diesel_migrations = "1.4"
env_logger = "0.8"
futures = "0.3"
ldap3 = "0.9"
log = "0.4"
md5 = "0.7"
once_cell = "1.7"
pnet = "0.27"
rand = "0.8"
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls", "json"]}
rpassword = "5.0"
semver = "0.11"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.9"
spa-server = "0.1"
strum = {version = "0.20", features = ["derive"]}
tokio = {version = "1.3", features = ["full"]}
toml = "0.5"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
